# CmakeLearning

./: .gitignore  README.docx
1__HelloWorld/: CMakeLists.txt  README
2__SharedLibrary/: CMakeLists.txt  README  SharedLib.cpp  SharedLib.h  main.cpp
